# internal/pkg/controllers/send-code-again.go
@@ -24,7 +24,7 @@ type SendCodeAgainResponse struct {
 // @Success 200 {object} SendCodeAgainResponse "Успешный ответ"
 // @Failure 400 {object} SendCodeAgainResponse "Неверный запрос"
 // @Failure 500 {object} SendCodeAgainResponse "Внутренняя ошибка сервера"
-// @Router /send-code-again [post]
+// @Router /auth/send-code-again [post]
 func (s *Server) SendCodeAgain(c *gin.Context) {
 	var request SendCodeAgainRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
