# internal/pkg/models/order-details.go
@@ -4,8 +4,9 @@ import "gorm.io/gorm"
 
 type OrderDetail struct {
 	gorm.Model
-	OrderID   uint
-	ProductID uint
-	Order     Order
-	Product   Product
+	OrderID      uint
+	ProductID    uint
+	ProductCount int
+	Order        Order
+	Product      Product
 }
